# asterisk-database-migrations

./: .gitignore  pyproject.toml
config/versions/: 2fc7930b41b3_add_pjsip_endpoint_options_for_12_1.py  43956d550a44_add_tables_for_pjsip.py  978cb510fe7c_updated_endpoint.py  a4f3a5e3841c_add_check_for_device_status.py  c6d929b23a8_create_pjsip_subscription_persistence_.py
