[tool.poetry]
name = "asterisk-database-migrations"
version = "0.1.0"
description = ""
authors = ["Theophilus Annor <annor_theophilus@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
